--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,6 +11,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="%PUBLIC_URL%/fonts/fonts.css" />
+    <script async src="https://analytics.nog.codes/script.js" data-website-id="3e667e8d-47a7-4ec7-8ed3-d17056dc0eb2"></script>
     <title>Sources, Please</title>
   </head>
   <body class="bg-white dark:bg-primary-dark m-0">
